--- a/public/client/views/navbar/navbar.html
+++ b/public/client/views/navbar/navbar.html
@@ -3,6 +3,28 @@
 <head>
 </head>
 <body>
-	<h1>NAVBAR</h1>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+			  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-contents" aria-expanded="false">
+			    <span class="sr-only">Toggle navigation</span>
+			    <span class="icon-bar"></span>
+			    <span class="icon-bar"></span>
+			    <span class="icon-bar"></span>
+			  </button>
+			  <a class="navbar-brand" href="#">MyPolitics</a>
+			</div>
+
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="navbar-contents">
+			  <ul class="nav navbar-nav">
+			    <li><a href="#">Legislators</a></li>
+			    <li><a href="#">Votes</a></li>
+			    <li><a href="#">Bills</a></li>
+			  </ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
 </body>
 </html>
