--- a/public/client/views/legislators/legislators.html
+++ b/public/client/views/legislators/legislators.html
@@ -3,45 +3,57 @@
 <head>
 </head>
 <body>
-	
-	<div class="container">
-		<h1 class="text-center">Legislators Page!!</h1>
-		<div>
-			<form class="form-inline">
-				<div class="form-group">
-					<h5>Party</h5>
-					<label ng-repeat="checkBox in model.partyCheckboxes">
-						<input type="checkbox" ng-model="checkBox.modelBinding" ng-change="model.updateFilteredParties(checkBox.value, checkBox.modelBinding)">
-						{{checkBox.displayValue}}
-					</label>
-
-					<h5>Chamber of Congress</h5>
-					<label ng-repeat="checkBox in model.chamberCheckboxes">
-						<input type="checkbox" ng-model="checkBox.modelBinding" ng-change="model.updateFilteredChambers(checkBox.value, checkBox.modelBinding)">
-						{{checkBox.displayValue}}
-					</label>
-
-					<h5>State</h5>
-					<label ng-repeat="checkBox in model.stateCheckboxes">
-						<input type="checkbox" ng-model="checkBox.modelBinding" ng-change="model.updateFilteredStates(checkBox.value, checkBox.modelBinding)">
-						{{checkBox.displayValue}}
-					</label>
-					<h3>Sort By</h3>
-					<button class="btn-block" ng-click="model.filterLegislators()">Filter</button>
-				</div>
-			</form>
+<h1 class="text-center">Current Legislators</h1>
+<div class="row">
+	<div class="col-sm-3">
+		<div class="col-sm-12">
+			<button class="btn btn-block btn-danger" ng-click="model.filterLegislators()">Filter</button>
+		</div>
+		<div class="col-sm-12">
+			<h4>Party</h4>
+		</div>	
+		<div ng-repeat="checkBox in model.partyCheckboxes">
+			<input class="col-sm-1" type="checkbox" ng-model="checkBox.isChecked" ng-change="model.updateFilteredParties(checkBox.value, checkBox.isChecked)">
+			<span class="col-sm-11">
+				{{checkBox.displayValue}}
+			</span>
+		</div>
+		<div class="col-sm-12">
+			<h4>Chamber of Congress</h4>
+		</div>
+		<div ng-repeat="checkBox in model.chamberCheckboxes">
+			<input class="col-sm-1" type="checkbox" ng-model="checkBox.isChecked" ng-change="model.updateFilteredChambers(checkBox.value, checkBox.isChecked)">
+			<span class="col-sm-11">
+				{{checkBox.displayValue}}
+			</span>
 		</div>
 
-		<div class="row">
-			<div class="thumbnail col-xs-6 col-md-2" ng-repeat="legislator in model.displayedLegislators" ng-click="model.onLegislatorClick(legislator.bioguide_id)">
-				<img ng-src="https://theunitedstates.io/images/congress/225x275/{{legislator.bioguide_id}}.jpg" class="img-responsive" alt="Legislator Image">
+		<h4>State</h4>
+		<div ng-repeat="checkBox in model.stateCheckboxes">
+			<input class="col-sm-1" type="checkbox" ng-model="checkBox.isChecked" ng-change="model.updateFilteredStates(checkBox.value, checkBox.isChecked)">
+			<span class="col-sm-11">
+				{{checkBox.displayValue}}
+			</span>
+		</div>
+
+		<button class="btn-block" ng-click="model.filterLegislators()">Filter</button>
+	</div>
+
+	<div class="col-sm-9">
+		<div class="row"style="padding-right:15px">
+			<span class="pull-right"><strong>Count:</strong> {{model.displayedLegislatorsCount}}</span>
+		</div>
+
+			<div class="thumbnail col-xs-6 col-sm-4 col-md-3" ng-repeat="legislator in model.displayedLegislators" ng-click="model.onLegislatorClick(legislator.bioguide_id)">
+				<img class="img-responsive" ng-src="https://theunitedstates.io/images/congress/225x275/{{legislator.bioguide_id}}.jpg"  alt="Legislator Image">
 				<div class="caption">
 					<h4>{{legislator.title}}. {{legislator.first_name}} {{legislator.last_name}} ({{legislator.party}})</h4>
-					<h4>State: {{legislator.state_name}}</h4>
+					<h4>{{legislator.state_name}}</h4>
 					<p></p>
 				</div>
 			</div>
-		</div>
-	</div>	
+		
+	</div>
+</div>	
 </body>
 </html>
