Implemented Bills Page, Updated Details pages for legislators and bills
—Added foundation 6 css grid because it uses flexbox (Bootstrap 3 does
not)
—Updated BillService method that calls back end
—Updated billDetail markup to use foundation 6 grid and added
sponsor/cosponsor details as well as the official name of the bill, and
urls to the official documentation on various government sites
—Updated BillDetailController to handle urls and route to legislator
detail page if legislator is clicked on
—Updated markup on bills page to use foundation 6 grid and created
thumbnails for bills with their name, last action date, and official
title
—Updated BillsController to load last 20 bills (temporary) and also to
handle routing to billDetail page if a bill is clicked on
—legislatorDetail page updated to use foundation 6 grid
—Added route that handles calls for bills for current congressional
section (returns latest 20 bills for now)

--- a/public/client/views/bills/bills.html
+++ b/public/client/views/bills/bills.html
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="./client/css/foundation 6/foundation.css" rel="stylesheet">
 </head>
 <body>
-	<div class="container">
-		<h1 class="text-center">Bills Page!</h1>
-		<br>
-		<div class="row">
-
-		<div class="form-group col-md-2">
-			<select class="form-control" id="filterBy">
-				<option selected>Filter By</option>
-				<option>Pulga</option>
-				<option>Bionica</option>
-				<option>ya</option>
-			</select>
+	<h1 class="text-center">Bills for Current Legislative Session</h1>
+	<div class="row">
+		<div class="small-6 large-3 columns thumbnail" ng-repeat="bill in model.bills" ng-click="model.onBillClick(bill.bill_id)">
+			<p class="text-right">
+				{{bill.bill_type | uppercase}} {{bill.number}}
+			</p>
+			<p ng-show="bill.short_title">
+				<strong>{{bill.short_title}}</strong>
+			</p>
+			<p ng-show="!bill.short_title">
+				<strong>{{bill.official_title}}</strong>
+			</p>
+			<p>
+				Last action at: {{bill.last_action_at | date : "longDate"}} @{{bill.last_action_at | date : "shortTime"}}
+			</p>
 		</div>
-
-			<div class="col-md-4">
-			</div>
-			<div class="col-md-4">
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-3 thumbnail" ng-repeat="bill in bills">
-				<div class="caption">
-					<h5 class="text-right">{{bill.bill_id}}</h5>
-					<h4>{{bill.official_title}}</h4>
-					<p>Sponsor: {{bill.sponsor.first_name}} {{bill.sponsor.last_name}} ({{bill.sponsor.party}})</p>
-				</div>
-			</div>
-		</div>
-	</div>	
+	</div>
 </body>
 </html>
