--- a/public/client/views/billDetail/billDetail.html
+++ b/public/client/views/billDetail/billDetail.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="./client/css/foundation 6/foundation.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
 		<h1 class="text-center" ng-show="!model.currentBill.short_title">{{model.currentBill.official_title}}</h1>
 		<h1 class="text-center" ng-show="model.currentBill.short_title">{{model.currentBill.short_title}}</h1>
+		<h2 class="text-center">Bill {{model.currentBill.bill_type | uppercase}} {{model.currentBill.number}}</h2>
 		<h2 class="text-center">Introduced on: {{model.currentBill.introduced_on | date : "longDate"}}</h2>
 		<h2 class="text-center">Introduced in the <span ng-show="model.currentBill.chamber === 'house'">House of Representatives</span> <span ng-show="model.currentBill.chamber === 'senate'">Senate</span> </h2>
 		
+		<h3>Sponsor:</h3>
+		<div class="row thumbnail" ng-click="model.onLegislatorClick(model.currentBill.sponsor.bioguide_id)">
+			<div class="small-4 medium-2 columns">
+				<img class="img-responsive" ng-src="https://theunitedstates.io/images/congress/225x275/{{model.currentBill.sponsor.bioguide_id}}.jpg">
+			</div>
+			<div class="small-8 medium-10 columns">
+				<p>{{model.currentBill.sponsor.title}}. {{model.currentBill.sponsor.first_name}} <span ng-show="model.currentBill.sponsor.middle_name">{{model.currentBill.sponsor.middle_name}}</span> {{model.currentBill.sponsor.last_name}} ({{model.currentBill.sponsor.party}})</p>
+				<p>of {{model.currentBill.sponsor.state_name}}</p>
+			</div>
+		</div>
+		<br>
+
+		<!-- Cosponsors -->
+		<button class="btn-lg btn-primary btn-block" type="button" data-toggle="collapse" data-target="#cosponsors" aria-expanded="false" aria-controls="cosponsors" ng-show="model.currentBill.cosponsors.length > 0">
+		  {{model.currentBill.cosponsors.length}} Cosponsors <span class="caret"></span>
+		</button>
+		<div class="collapse well" id="cosponsors">
+			<div class="row">
+				<div class="small-6 medium-2 columns thumbnail" ng-repeat="cosponsor in model.currentBill.cosponsors" ng-click="model.onLegislatorClick(cosponsor.legislator.bioguide_id)">
+					<img class="img-responsive" ng-src="https://theunitedstates.io/images/congress/225x275/{{cosponsor.legislator.bioguide_id}}.jpg" >
+					<p>
+						{{cosponsor.legislator.first_name}} <span ng-show="cosponsor.legislator.middle_name">{{cosponsor.legislator.middle}}</span> {{cosponsor.legislator.last_name}} ({{cosponsor.legislator.party}})
+					</p>
+					<span>of {{cosponsor.legislator.state_name}}</span>
+				</div>	
+			</div>
+		</div>
+		<br>
+
 		<button class="btn-lg btn-primary btn-block" type="button" data-toggle="collapse" data-target="#summary_short" aria-expanded="false" aria-controls="summary_short" ng-show="model.currentBill.summary_short">
 		  Short Summary <span class="caret"></span>
 		</button>
@@ -22,6 +53,11 @@
 		<div class="collapse well" id="summary" ng-show-"model.currentBill.summary">
 			<p>{{model.currentBill.summary}}</p>	
 		</div>
+		<h2>Urls:</h2>
+		<p>
+			<span ng-repeat="property in model.urls"><a ng-href="{{model.currentBill.urls[property]}}" target="_blank">{{property}}</a>&nbsp; &nbsp; &nbsp; &nbsp;</span>			
+		</p>
+
 	</div>
 </body>
 </html>
