--- a/public/client/views/legislatorDetail/legislatorDetail.html
+++ b/public/client/views/legislatorDetail/legislatorDetail.html
@@ -6,13 +6,16 @@
 	<div class="container">
 		<br>
 		<div class="row">
-			<div class="col-sm-4">
-				<img class="img-responsive center-block" ng-src="https://theunitedstates.io/images/congress/225x275/{{model.currentLegislatorId}}.jpg" >
+			<div class="col-sm-12 col-md-4">
+				<div class="col-xs-12">
+					<img class="img-responsive center-block" ng-src="https://theunitedstates.io/images/congress/225x275/{{model.currentLegislatorId}}.jpg" >
+					<br>
+					<a class="btn btn-primary col-xs-6 col-xs-offset-3 col-sm-8 col-sm-offset-2" ng-href="{{model.currentLegislator.contact_form}}" ng-show="model.currentLegislator.contact_form" target="_blank">Contact</a>
+				</div>
 				<br>
-				<a class="btn btn-block btn-primary" ng-href="{{model.currentLegislator.contact_form}}" ng-show="model.currentLegislator.contact_form" target="_blank">Contact</a>
 				
 				<!-- Social Media Icons -->
-				<div class="text-center">
+				<div class="text-center col-xs-12">
 					<a class="btn btn-social-icon btn-facebook" ng-show="model.currentLegislator.facebook_id" href="https://facebook.com/{{model.currentLegislator.facebook_id}}" target="_blank">
 						<span class="fa fa-facebook-square fa-3x"></span>
 					</a>
@@ -21,7 +24,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-12 col-md-8">
 				<h1 style="margin-top:0;">{{model.currentLegislator.first_name}} {{model.currentLegislator.middle_name}} {{model.currentLegislator.last_name}} {{model.currentLegislator.name_suffix}} ({{model.currentLegislator.party}})</h1>
 				<h3 ng-show="model.currentLegislator.district" style="margin-top:0">{{model.currentLegislator.district}}<sup>{{model.repDistrictOrdinalSuffix}}</sup> District of {{model.currentLegislator.state_name}}</h3>
 				<h3 ng-show="model.currentLegislator.state_rank" style="margin-top:0">{{model.currentLegislator.state_rank.substring(0,1) | uppercase}}{{model.currentLegislator.state_rank.substring(1)}} Senator from {{model.currentLegislator.state_name}}</h3>
